--- a/react-app/src/components/EditProject/editProject.css
+++ b/react-app/src/components/EditProject/editProject.css
@@ -1,16 +1,27 @@
 .editPage {
     display: flex;
     flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
     margin-top: 100px;
     height: 100%;
     height: 90vh;
     /* border: 2px solid green; */
 }
 
+.edit-project-from {
+    display: flex;
+    justify-content: center;
+}
+
 .label-input-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    border: 1px solid rgb(187, 186, 186);
+    width: 1000px;
+    border-radius: 8px;
 }
 
 #overview {
